responsive is ready

--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -1,5 +1,5 @@
 
-#wrapper {
+#wrapper-register {
     margin-top: 2%;
     background-size: cover;
     .page_text {
@@ -52,14 +52,14 @@
 #register {
     padding-top: 71px;
 
-    .form-login {
+    .form-register {
         display: flex;
         justify-content: center;
         align-items: center;
 
     }
 
-    .form-login-wrap {
+    .form-register-wrap {
         padding: 50px;
         background: #f6f6f6;
         margin-bottom: 30px;
