--- a/assets/scss/_productDetail.scss
+++ b/assets/scss/_productDetail.scss
@@ -1,4 +1,4 @@
-#wrapper {
+#wrapper-productDetail {
     margin-top: 2%;
     background-size: cover;
     .page_text {
@@ -15,7 +15,7 @@
             color: #3e3d3d;
             font-weight: 600;
             font-size: 1.375rem;
-            font-family: auto;     
+            font-family: auto;
         }
 
         ul {
