--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -73,7 +73,7 @@
   font-family: Roboto, Helvetica Neue, sans-serif;
   text-decoration: none;
   border: 1px solid #b8b8b8;
-  padding: 13px 19px 13px 12px;
+  padding: 13px 36px 13px 12px;
   font-size: 11px;
   display: block;
   background: linear-gradient(to right, #e9ac98 50%, #fff2f2 50%);
@@ -96,26 +96,30 @@
 #slider .swiper-slide .slide .sale {
   position: absolute;
   display: inline-block;
-  font-size: 75px;
-  color: rgb(88, 82, 94);
-  font-weight: 700;
+  font-family: "Marcellus";
+  font-weight: 400;
+  font-size: 47px;
+  transform-origin: 50% 50%;
+  font-size: 48px;
+  color: #C08586;
 }
 #slider .swiper-slide .slide .saleName {
-  font-family: "Marck Script", cursive;
+  font-family: "Marcellus";
   position: absolute;
-  font-size: 50px;
-  color: rgb(192, 133, 134);
+  font-size: 14px;
+  color: #000;
 }
 #slider .swiper-slide .slide .caption-contain {
   position: absolute;
   text-align: start;
-  font-size: 30px;
+  font-family: "Marcellus";
+  font-size: 24px;
   font-weight: 500;
   color: rgb(88, 82, 94);
 }
 #slider .swiper-slide .slide-1 .shop {
-  top: 68%;
-  left: 13%;
+  top: 52% !important;
+  left: 22% !important;
 }
 #slider .swiper-slide .slide-1 .shop-click {
   transform: translateX();
@@ -125,28 +129,47 @@
   top: 34%;
 }
 #slider .swiper-slide .slide-1 .saleName {
-  left: 14%;
-  top: 21%;
+  top: 30%;
+  left: 22%;
 }
 #slider .swiper-slide .slide-1 .caption-contain {
-  left: 13%;
-  top: 51%;
+  left: 15%;
+  top: 44%;
+  font-size: 24px;
 }
 #slider .swiper-slide .slide-2 .shop {
-  top: 65%;
-  right: 26%;
+  top: 51%;
+  left: 67%;
 }
 #slider .swiper-slide .slide-2 .sale {
   right: 15%;
   top: 31%;
 }
 #slider .swiper-slide .slide-2 .saleName {
-  right: 19%;
-  top: 17%;
+  right: 21%;
+  top: 26%;
 }
 #slider .swiper-slide .slide-2 .caption-contain {
-  right: 17%;
-  top: 48%;
+  right: 16%;
+  top: 42%;
+  font-size: 19px;
+}
+#slider .swiper-slide .slide-3 .shop {
+  top: 52% !important;
+  left: 21% !important;
+}
+#slider .swiper-slide .slide-3 .sale {
+  top: 31%;
+  left: 14%;
+}
+#slider .swiper-slide .slide-3 .saleName {
+  top: 27%;
+  left: 22%;
+}
+#slider .swiper-slide .slide-3 .caption-contain {
+  left: 21%;
+  top: 42%;
+  font-size: 19px;
 }
 #slider .swiper-slide img {
   display: block;
@@ -337,7 +360,7 @@ hr {
   opacity: 0;
   position: absolute;
   top: 38%;
-  left: 14%;
+  left: 26%;
 }
 #products .cart .functional-buttons ul {
   list-style: none;
@@ -629,7 +652,8 @@ hr {
 #blogs .blog {
   position: relative;
   width: 420px;
-  height: 384px;
+  height: 329px;
+  border-radius: 10px;
   border: 1px solid #dfd7d7;
 }
 #blogs .blog img {
@@ -683,14 +707,18 @@ hr {
   position: absolute;
   z-index: -11;
   transition: 0.7s;
+  border-radius: 10px;
 }
 #blogs .blog .blog-img img {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 #blogs .blog:hover .blog-img {
   opacity: 1;
-  height: 384px;
+  height: 329px;
+  z-index: -11;
+  transition: 0.7s;
 }
 #blogs .blog:hover .blogg {
   color: white;
@@ -1969,6 +1997,26 @@ hr {
   width: 94% !important;
 }
 
+.pagination ul li:hover {
+  display: block;
+}
+.pagination button {
+  background-color: #de9076;
+  border-color: #de9076;
+  color: #fff;
+  width: 31px;
+  height: 30px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 50%;
+  margin-left: 8px;
+  cursor: pointer;
+}
+.pagination button:hover {
+  display: block !important;
+}
+
 .products-variants-responsive {
   height: 100vh;
   top: 0;
@@ -2279,6 +2327,9 @@ hr {
   position: relative;
   left: 12px;
 }
+#wpb_wrapper .products-variants .dresses-variants ul li a {
+  cursor: pointer;
+}
 #wpb_wrapper .products-variants .dresses-variants ul li a .siluet {
   display: inline;
 }
@@ -2505,11 +2556,11 @@ hr {
   font-family: Marcellus;
   src: url("https://fonts.googleapis.com/css2?family=Marcellus&display=swap");
 }
-#wrapper {
+#wrapper-productDetail {
   margin-top: 2%;
   background-size: cover;
 }
-#wrapper .page_text {
+#wrapper-productDetail .page_text {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -2518,33 +2569,33 @@ hr {
   width: 406px;
   text-align: center;
 }
-#wrapper .page_text h1 {
+#wrapper-productDetail .page_text h1 {
   text-transform: uppercase;
   color: #3e3d3d;
   font-weight: 600;
   font-size: 1.375rem;
   font-family: auto;
 }
-#wrapper .page_text ul {
+#wrapper-productDetail .page_text ul {
   list-style: none;
   display: flex;
   align-items: center;
   padding: 0px !important;
   gap: 4px;
 }
-#wrapper .page_text ul li {
+#wrapper-productDetail .page_text ul li {
   font-size: 14px;
   margin: 4px;
   margin: 0 !important;
 }
-#wrapper .page_text ul li span {
+#wrapper-productDetail .page_text ul li span {
   color: #666;
 }
-#wrapper .page_text ul a {
+#wrapper-productDetail .page_text ul a {
   text-decoration: none;
   color: #9faaa7;
 }
-#wrapper .page_text ul i {
+#wrapper-productDetail .page_text ul i {
   position: relative;
   font-size: 11px;
   bottom: 1px;
@@ -4590,30 +4641,44 @@ hr {
     border: none;
   }
   #slider .swiper-slide .slide .saleName {
-    top: 24% !important;
-    font-size: 10px !important;
+    top: 29% !important;
+    font-size: 8px !important;
   }
   #slider .swiper-slide .slide .sale {
     top: 38% !important;
-    font-size: 16px !important;
+    font-size: 14px !important;
+    left: 17%;
   }
   #slider .swiper-slide .slide .caption-contain {
-    font-size: 10px !important;
+    font-size: 6px !important;
+    left: 20%;
+    top: 49%;
   }
   #slider .swiper-slide .slide .shop {
     padding: 3px 5px 3px 5px !important;
     font-size: 5px !important;
-    top: 72% !important;
+    top: 61% !important;
+    left: 24% !important;
   }
   #slider .swiper-slide .slide-2 .saleName {
-    right: 26% !important;
+    right: 13% !important;
+    font-size: 8px !important;
   }
   #slider .swiper-slide .slide-2 .sale {
-    right: 23% !important;
-    top: 35% !important;
+    top: 38% !important;
+    left: 52%;
   }
   #slider .swiper-slide .slide-2 .shop {
-    right: 27% !important;
+    left: 62% !important;
+  }
+  #slider .swiper-slide .slide-2 .caption-contain {
+    font-size: 6px;
+    left: 53%;
+    top: 51%;
+  }
+  #slider .swiper-slide .slide-3 .caption-contain {
+    left: 24%;
+    top: 50%;
   }
   #slider .swiper:hover .swiper-button-prev {
     width: 40px !important;
@@ -5027,9 +5092,6 @@ hr {
   #footer-top-shop .service-item {
     margin-bottom: 40px;
   }
-  #footer-top-shop .service-item .title {
-    font-weight: 400;
-  }
   #footer hr {
     display: none;
   }
@@ -5308,6 +5370,24 @@ hr {
   #register .form-register-wrap .area-password input {
     width: 332px !important;
   }
+  #wrapper-productDetail {
+    width: 100%;
+    height: 144px;
+  }
+  #wrapper-productDetail .page_text {
+    width: 200px;
+    height: 100px;
+    text-align: center;
+    top: 30% !important;
+  }
+  #wrapper-productDetail .page_text h1 {
+    position: relative;
+    top: 52px;
+    font-size: 22px;
+  }
+  #wrapper-productDetail .page_text ul {
+    margin-top: 48px;
+  }
   #product-detail .prod-thumb-left {
     float: none;
     right: 0px;
@@ -5550,33 +5630,57 @@ hr {
     margin-left: 6px;
   }
   #slider .mySwiper .swiper-wrapper .swiper-slide .slide .saleName {
-    top: 24% !important;
-    font-size: 40px !important;
+    font-size: 14px !important;
   }
   #slider .mySwiper .swiper-wrapper .swiper-slide .slide .sale {
-    top: 41% !important;
     font-size: 32px !important;
-    left: 14%;
   }
   #slider .mySwiper .swiper-wrapper .swiper-slide .slide .caption-contain {
-    font-size: 20px !important;
-    left: 14%;
+    font-size: 12px !important;
   }
   #slider .mySwiper .swiper-wrapper .swiper-slide .slide .shop {
     padding: 6px 7px 6px 7px !important;
     font-size: 6px !important;
-    top: 72% !important;
+  }
+  #slider .mySwiper .swiper-wrapper .swiper-slide .slide-1 .saleName {
+    left: 20%;
+    top: 33% !important;
+  }
+  #slider .mySwiper .swiper-wrapper .swiper-slide .slide-1 .shop {
+    top: 64% !important;
+    left: 23%;
+  }
+  #slider .mySwiper .swiper-wrapper .swiper-slide .slide-1 .sale {
+    top: 41% !important;
     left: 14%;
   }
+  #slider .mySwiper .swiper-wrapper .swiper-slide .slide-1 .caption-contain {
+    left: 17%;
+    top: 53%;
+  }
   #slider .mySwiper .swiper-wrapper .swiper-slide .slide-2 .saleName {
-    right: 26% !important;
+    left: 50%;
+    top: 28% !important;
   }
   #slider .mySwiper .swiper-wrapper .swiper-slide .slide-2 .sale {
-    right: 23% !important;
+    left: 50%;
     top: 35% !important;
   }
   #slider .mySwiper .swiper-wrapper .swiper-slide .slide-2 .shop {
     right: 27% !important;
+    top: 59% !important;
+  }
+  #slider .mySwiper .swiper-wrapper .swiper-slide .slide-2 .caption-contain {
+    left: 53%;
+    top: 49%;
+  }
+  #slider .mySwiper .swiper-wrapper .swiper-slide .slide-3 .saleName {
+    left: 23%;
+    top: 32% !important;
+  }
+  #slider .mySwiper .swiper-wrapper .swiper-slide .slide-3 .shop {
+    top: 59% !important;
+    left: 25% !important;
   }
   #slider .swiper:hover .swiper-button-prev {
     width: 40px !important;
@@ -5860,6 +5964,12 @@ hr {
   }
 }
 @media (min-width: 768px) and (max-width: 1200px) {
+  #slider .mySwiper .swiper-wrapper .swiper-slide .slide-2 .sale {
+    font-size: 30px !important;
+  }
+  #slider .mySwiper .swiper-wrapper .swiper-slide .slide-2 .caption-contain {
+    font-size: 11px !important;
+  }
   #blogs .blog-slider {
     margin-left: 37px;
   }
@@ -5916,6 +6026,19 @@ hr {
     left: 21px;
   }
   #wrapper-blogDetail .page_text h1 {
+    font-size: 27px;
+  }
+  #wrapper-productDetail {
+    width: 100%;
+    height: 380px;
+  }
+  #wrapper-productDetail .page_text {
+    position: relative;
+    width: 78%;
+    top: 7%;
+    left: 21px;
+  }
+  #wrapper-productDetail .page_text h1 {
     font-size: 27px;
   }
   #wrapper-forgotPassword {
